--- a/index.html
+++ b/index.html
@@ -17,8 +17,25 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contacts">Contacts</a></li>
 
-            </ul>
+            </ul> 
+        </div>
+    </nav>
+    <nav id="hamburger-nav">
+        <div class="logo">Katamii</div>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon"onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
             
+            </div>
+            <div class="menu-links">
+                <li><a href="#about"onclick="toggleMenu()">About</a></li>
+                <li><a href="#experiences"onclick="toggleMenu()">Experiences</a></li>
+                <li><a href="#projects"onclick="toggleMenu()">Projects</a></li>
+                <li><a href="#contacts"onclick="toggleMenu()">Contacts</a></li> 
+            </div>
+
         </div>
     </nav>
     <script src="script.js"></script>
