--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
 
         </div>
     </nav>
+    <section id="profile">
+        <div class="section_pic-container">
+            <img src="./assets/profile-pic.png" alt="Katamii profile picture">
+        </div>
+        <div class="section_text">
+            <p class="section_text_p1">Hello,i'm</p>
+            <h1 class="title">Katamii</h1>
+            <p class="section_text_p2">Software Engineer</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2"onclick="window.open('./assets/')"></button>
+            </div>
+        </div>
+
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
