--- a/index.html
+++ b/index.html
@@ -47,10 +47,55 @@
             <h1 class="title">Katamii</h1>
             <p class="section_text_p2">Software Engineer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2"onclick="window.open('./assets/')"></button>
+                <button class="btn btn-color-2"onclick="window.open('./assets/resume.example')">Download cv</button>
+                <button class="btn btn-color-1"onclick="location.href='./#contacts'">Contact info</button>
+            </div>
+            <div id="socials-container">
+                <img src="./assets/linkedin.png" alt="my linkedin profile" 
+                class="icon"onclick="location.href='https://linkedin.com'">
+                <img src="./assets/github.png" alt="my Github profile" 
+                class="icon"onclick="location.href='https://github.com'">
+                
+
             </div>
         </div>
 
+    </section>
+    <section id="about">
+        <p class="section_text_p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section_container">
+            <div class="section-pic-container">
+                <img src="./assets/about-pic.png"
+                 alt="profile picture"
+                 class="about-pic"
+                 />
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/experience.png"
+                         alt="experience icon"
+                         class="icon"
+                         />
+                        <h1>Experience</h1>
+                        <p>2+ years <br> Software Engineering</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/education.png"
+                         alt="Education icon"
+                         class="icon"
+                         />
+                        <h1>Education</h1>
+                        <p>B.SC Bachelors Degree<br> Software Engineering</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi aperiam molestias alias, accusantium nesciunt, quaerat quos similique sunt dolore dicta nobis ducimus voluptate tempora exercitationem, atque maxime quod dolorum. Laboriosam?</p>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon"class="icon arrow" onclick="location.href='./experience'">
     </section>
     <script src="script.js"></script>
 </body>
