--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p class="section_text_p1">Get To Know More</p>
         <h1 class="title">About Me</h1>
         <div class="section_container">
-            <div class="section-pic-container">
+            <div class="section_pic-container">
                 <img src="./assets/about-pic.png"
                  alt="profile picture"
                  class="about-pic"
@@ -96,6 +96,124 @@
             </div>
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon"class="icon arrow" onclick="location.href='./experience'">
+    </section>
+    <section class="experience">
+        <p class="section_text_p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            
+            <div class="about-container">
+                <div class="details-containers">
+                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>HTML</h1>
+                                <P>Experienced</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>CSS</h1>
+                                <P>Experienced</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>SASS</h1>
+                                <P>Intermidiate</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>javascript</h1>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>Typescript</h1>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>Material UI</h1>
+                                <P>Intermidiate</P>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+            <div class="about-container">
+                <div class="details-containers">
+                    <h2 class="experience-sub-title">Backend Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>postgresql</h1>
+                                <P>Experienced</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>mysql</h1>
+                                <P>Experienced</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>PHP</h1>
+                                <P>Intermidiate</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>Node js</h1>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>python</h1>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon"
+                            class="icon">
+                            <div>
+                                <h1>Django</h1>
+                                <P>Intermidiate</P>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon"class="icon arrow" onclick="location.href='./Projects'">
     </section>
     <script src="script.js"></script>
 </body>
